src/test/ui/issues/issue-34229.rs
#[derive(PartialEq)] struct Comparable;
#[derive(PartialEq, PartialOrd)] struct Nope(Comparable);

fn main() {}
